--- a/packages/styles/scss/prefabs/video-conference.scss
+++ b/packages/styles/scss/prefabs/video-conference.scss
@@ -55,18 +55,54 @@
   overflow-y: auto;
 }
 
-// Move to other place
-.video-file-modal-overlay {
+.share-modal {
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.7);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: var(--lk-bg);
+  padding: 1rem;
+  border-radius: var(--lk-border-radius);
+
   display: flex;
+  &-hidden {
+    display: none;
+  }
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  z-index: 1000;
+  gap: 0.5rem;
+  padding: 0.75rem 1.25rem;
+  background-color: var(--lk-bg);
+  border: 1px solid var(--border-color);
+  border-radius: var(--border-radius);
+  box-shadow: var(--box-shadow);
+  min-width: 50vw;
+  min-height: 50vh;
+  max-width: 100%;
+  max-height: 100%;
+  overflow-y: auto;
+}
+
+// Move to other place
+
+.tab-container {
+  width: 100%;
+  max-width: 500px;
+  padding-inline: 2rem;
+}
+
+.tab-select {
+  display: flex;
+  justify-content: stretch;
+  gap: 0.125rem;
+  padding: 0.125rem;
+  margin: 0 auto 1.5rem;
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  border-radius: 0.5rem;
+}
+
+.tab-select > * {
+  width: 100%;
 }
 
 .video-file-modal {
