--- a/packages/styles/scss/prefabs/video-conference.scss
+++ b/packages/styles/scss/prefabs/video-conference.scss
@@ -65,9 +65,6 @@
   border-radius: var(--lk-border-radius);
 
   display: flex;
-  &-hidden {
-    display: none;
-  }
   flex-direction: column;
   align-items: center;
   gap: 0.5rem;
@@ -81,6 +78,10 @@
   max-width: 100%;
   max-height: 100%;
   overflow-y: auto;
+}
+
+.share-modal-hidden {
+  display: none;
 }
 
 // Move to other place
